RESOLVED FIXED110974
REGRESSION: INPUT_MULTIPLE_FIELDS_UI: Changing CSS display property on input[type=date] unexpectedly makes another line for ::-webkit-calendar-picker-indicator
https://bugs.webkit.org/show_bug.cgi?id=110974
Summary REGRESSION: INPUT_MULTIPLE_FIELDS_UI: Changing CSS display property on input[...
Kent Tamura
Reported 2013-02-27 06:03:40 PST
<input type=date style="display:inline-block;"> has 2-lines height and the second line contains only calendar picker arrow. Twitter bootstrap adds display:inline-block by default. https://code.google.com/p/chromium/issues/detail?id=178175
Attachments
Screenshot (12.26 KB, image/png)
2013-02-27 06:04 PST, Kent Tamura
no flags
Patch (126.36 KB, patch)
2013-02-27 06:09 PST, Kent Tamura
no flags
Patch 2 (133.85 KB, patch)
2013-02-28 05:12 PST, Kent Tamura
no flags
Kent Tamura
Comment 1 2013-02-27 06:04:09 PST
Created attachment 190500 [details] Screenshot
Kent Tamura
Comment 2 2013-02-27 06:09:28 PST
WebKit Review Bot
Comment 3 2013-02-27 06:12:18 PST
Attachment 190502 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/fast/forms/date/date-appearance-basic-expected.txt', u'LayoutTests/fast/forms/date/date-appearance-basic.html', u'LayoutTests/platform/chromium-mac/fast/forms/date/date-appearance-basic-expected.png', u'LayoutTests/platform/chromium/TestExpectations', u'Source/WebCore/ChangeLog', u'Source/WebCore/html/BaseMultipleFieldsDateAndTimeInputType.cpp', u'Source/WebCore/html/BaseMultipleFieldsDateAndTimeInputType.h']" exit_code: 1 LayoutTests/platform/chromium-mac/fast/forms/date/date-appearance-basic-expected.png:0: Have to enable auto props in the subversion config file (/home/alancutter/.subversion/config "enable-auto-props = yes"). Have to set the svn:mime-type in the subversion config file (/home/alancutter/.subversion/config "*.png = svn:mime-type=image/png"). [image/png] [5] Total errors found: 1 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Kentaro Hara
Comment 4 2013-02-27 07:02:58 PST
Comment on attachment 190502 [details] Patch rs=me
WebKit Review Bot
Comment 5 2013-02-27 07:31:47 PST
Comment on attachment 190502 [details] Patch Clearing flags on attachment: 190502 Committed r144184: <http://trac.webkit.org/changeset/144184>
WebKit Review Bot
Comment 6 2013-02-27 07:31:50 PST
All reviewed patches have been landed. Closing bug.
Kent Tamura
Comment 7 2013-02-28 00:46:56 PST
(In reply to comment #5) > (From update of attachment 190502 [details]) > Clearing flags on attachment: 190502 > > Committed r144184: <http://trac.webkit.org/changeset/144184> I found the flexible box didn't work well with this change. I'm reverting.
Kent Tamura
Comment 8 2013-02-28 00:58:09 PST
Reverted r144184 for reason: The change didn't fix all of the problems. Committed r144271: <http://trac.webkit.org/changeset/144271>
Kent Tamura
Comment 9 2013-02-28 05:12:04 PST
WebKit Review Bot
Comment 10 2013-02-28 05:16:50 PST
Attachment 190710 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/fast/forms/date/date-appearance-basic-expected.txt', u'LayoutTests/fast/forms/date/date-appearance-basic.html', u'LayoutTests/platform/chromium-mac/fast/forms/date/date-appearance-basic-expected.png', u'LayoutTests/platform/chromium/TestExpectations', u'Source/WebCore/ChangeLog', u'Source/WebCore/css/html.css', u'Source/WebCore/html/BaseMultipleFieldsDateAndTimeInputType.cpp', u'Source/WebCore/html/BaseMultipleFieldsDateAndTimeInputType.h', u'Source/WebCore/html/HTMLInputElement.cpp', u'Source/WebCore/html/InputType.cpp', u'Source/WebCore/html/InputType.h']" exit_code: 1 LayoutTests/platform/chromium-mac/fast/forms/date/date-appearance-basic-expected.png:0: Have to enable auto props in the subversion config file (/home/alancutter/.subversion/config "enable-auto-props = yes"). Have to set the svn:mime-type in the subversion config file (/home/alancutter/.subversion/config "*.png = svn:mime-type=image/png"). [image/png] [5] Total errors found: 1 in 12 files If any of these errors are false positives, please file a bug against check-webkit-style.
Kentaro Hara
Comment 11 2013-02-28 08:47:34 PST
Comment on attachment 190710 [details] Patch 2 View in context: https://bugs.webkit.org/attachment.cgi?id=190710&action=review > Source/WebCore/html/HTMLInputElement.cpp:-1968 > - if (!m_inputType->shouldApplyLocaleDirection()) > - return originalStyle.release(); Why do you want to remove shouldApplyLocaleDirection() from the new code?
Kent Tamura
Comment 12 2013-02-28 10:05:30 PST
Comment on attachment 190710 [details] Patch 2 View in context: https://bugs.webkit.org/attachment.cgi?id=190710&action=review >> Source/WebCore/html/HTMLInputElement.cpp:-1968 >> - return originalStyle.release(); > > Why do you want to remove shouldApplyLocaleDirection() from the new code? I converted shouldApplyLocaleDirection to another virtual function, InputType::customStyleForRenderer. Only BaseMultipleFieldsDateAndTimeInputType returns true for shouldApplyLocaleDirection. So we can move the code followed by "if (...shouldApplyLocaleDirection())" to BaseMultipleFieldsDateAndTimeInputType::customStyleForRenderer.
Kentaro Hara
Comment 13 2013-02-28 10:15:52 PST
Comment on attachment 190710 [details] Patch 2 ah, I got it. Looks OK to me.
WebKit Review Bot
Comment 14 2013-02-28 13:01:13 PST
Comment on attachment 190710 [details] Patch 2 Clearing flags on attachment: 190710 Committed r144352: <http://trac.webkit.org/changeset/144352>
WebKit Review Bot
Comment 15 2013-02-28 13:01:18 PST
All reviewed patches have been landed. Closing bug.
Dirk Pranke
Comment 16 2013-02-28 15:35:42 PST
updated the baseline for fast/forms/date/date-appearance-basic.html
Note You need to log in before you can comment on or make changes to this bug.